error handling & placeholders

--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,7 @@ label {
     border-radius: 5px;
     padding: 10px;
     margin: 10px;
-    background-color: #2660a3;
+    background-color: white;
 }
 
 .actions {
